map,filter,reduce

--- a/Programacion Funcional Introduccion.ipynb
+++ b/Programacion Funcional Introduccion.ipynb
@@ -130,6 +130,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Funciones importantes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Aquí poner algo sobre funciones anónimas y funciones lambda*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " La herramienta map aplica una función a todos los elementos de una lista de entrada . A continuación se ejemplifica su uso : "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "   map(funcion_para_aplicar, lista_entrada)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 125, 343, 512, 1331, 39304]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def cuboDeUnNumero (x) :\n",
+    "    return x**3\n",
+    "    \n",
+    "elementos = [1 , 5, 7, 8, 11 , 34]\n",
+    "list(map(cuboDeUnNumero, elementos))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
