--- a/Funciones de orden superior.ipynb
+++ b/Funciones de orden superior.ipynb
@@ -122,7 +122,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from functools import reduce\n",
@@ -353,12 +355,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "from functools import partial\n",
+    "import operator\n",
+    "\n",
+    "def is_prime(n):\n",
+    "    for i in range(2,int(n**0.5)+1):\n",
+    "        if n%i==0:\n",
+    "            return False\n",
+    "\n",
+    "    return True\n",
+    "\n",
+    "todosP = lambda elemento, *prueba: all(p(elemento) for p in prueba)\n",
+    "algunP = lambda elemento, *prueba : any(p(elemento) for p in prueba)\n",
+    "\n",
+    "esMenor100= partial(operator.ge, 100)\n",
+    "esMayor10= partial(operator.le , 10)\n",
+    "\n",
+    "todosP(71, esMenor100, esMayor10, is_prime)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predicados = (esMenor100, esMayor10, is_prime)\n",
+    "todosP(107, *predicados)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Operator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como se ha demostrado en algunos de los ejemplos, cada operación que se puede hacer con operadores infijo y prefijo de Python corresponden a una función ligada al módulo de operador. Muchas veces usar el nombre desde el operador es más rápido y se ve mejor que un correspondiente lambda. Por ejemplo "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'iterable' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-8995ae44cae8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mfunctools\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mreduce\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0msuma1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreduce\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mb\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0miterable\u001b[0m \u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'iterable' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "suma1 = reduce (lambda a,b: a+b , iterable , 0)\n",
+    "suma2 = reduce(operator.add , iterable, 0)\n",
+    "suma3 = sum(iterable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decoradores (currying)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Um decorador toma una función como argumento,y si está programado correctamente, devuelve una nueva función que es de alguna manera una mejora de la función original (o método, o clase)."
+   ]
   },
   {
    "cell_type": "code",
