Ejemplo Piedra papel tijera

--- a/Callables.ipynb
+++ b/Callables.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unidad 2 : Callables "
+    "# CALLABLES "
    ]
   },
   {
@@ -22,7 +22,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,20 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[6, 15, 18, 21]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "## Ejemplo No.1 Retorna una lista nueva que contiene triples de los elementos de unaLista\n",
     "def tripleDiversion (unaLista):\n",
-    "    #Retorna una lista nueva que contiene triples de los elementos de unaLista\n",
     "    nuevaLista = []\n",
     "    for cadaElemento in unaLista :\n",
     "        nuevoElemento = 3* cadaElemento\n",
@@ -87,7 +78,18 @@
     "    return nuevaLista\n",
     "\n",
     "miLista = [2 , 5, 6, 7]\n",
-    "miListaNueva = tripleDiversion(miLista)\n",
+    "miListaNueva = tripleDiversion(miLista)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\" Resultado \"\"\"\n",
     "print (miListaNueva)"
    ]
   },
@@ -154,6 +156,7 @@
    },
    "outputs": [],
    "source": [
+    "## Ejemplo No.2 Realiza la suma normal de dos numeros\n",
     "def sumaConvencional (numeroUno, numeroDos):\n",
     "    return numeroUno+numeroDos"
    ]
@@ -186,6 +189,7 @@
     }
    ],
    "source": [
+    "\"\"\"Resultado\"\"\"\n",
     "suma(4,5)"
    ]
   },
@@ -264,14 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio 2.1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pruebe la función saludar , modifique la función convencional y su correspondiente  lambda para que eleve al cuadrado un número. <img src=\"https://d1b6tx2agdphz5.cloudfront.net/tuenti-es/attachment/bebdc4a9-2c03-411a-a777-813612a28ff9.png\" width=\"12%\">"
+    "__Ejercicio__ : Pruebe la función saludar , modifique la función convencional y su correspondiente  lambda para que eleve al cuadrado un número. <img src=\"https://d1b6tx2agdphz5.cloudfront.net/tuenti-es/attachment/bebdc4a9-2c03-411a-a777-813612a28ff9.png\" width=\"12%\">"
    ]
   },
   {
@@ -359,9 +356,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "## Ejemplo No.3.1 Realizar un incremento fijo dado un valor _FormaImperativa_\n",
     "class incremento(object):\n",
     "    def __init__(self,n):\n",
     "        self.n=n\n",
@@ -389,17 +389,19 @@
     }
    ],
    "source": [
+    "\"\"\"Resultado\"\"\"\n",
     "incrementoDeCincoI(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "## Ejemplo No.3.2 Realizar un incremento fijo dado un valor _FormaFuncional_\n",
     "def hacer_incremento(n):\n",
     "    def incremento(m):\n",
     "        return m+n\n",
@@ -410,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -419,12 +421,13 @@
        "15"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"Resultado\"\"\"\n",
     "incrementoDeCincoF(10)"
    ]
   },
@@ -488,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Accesarios y operadores"
+    "### Accesorios y operadores"
    ]
   },
   {
@@ -500,12 +503,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "## Ejemplo No.4 El típico ejemplo del objeto Carro para mostrar los accesorios y los operadores\n",
     "class Carro(object):\n",
     "    def __init__(self):\n",
     "        self._velocidad=100\n",
@@ -525,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -536,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -548,6 +552,7 @@
     }
    ],
    "source": [
+    "\"\"\"Resultado\"\"\"\n",
     "carrito.velocidad=90"
    ]
   },
@@ -584,33 +589,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "class TalkativeInt(int):\n",
+    "class cambio(int):\n",
     "    def __lshift__(self,other):\n",
-    "        print(\"Shift\", self, \"by\" , other)\n",
+    "        print(\"Cambiar\", self, \"por\" , other)\n",
     "        return int.__lshift__(self, other)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "t = TalkativeInt(8)"
+    "t = cambio(8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +624,7 @@
        "8"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,14 +635,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shift 8 by 3\n"
+      "Cambiar 8 por 3\n"
      ]
     },
     {
@@ -646,12 +651,13 @@
        "64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"Resultado\"\"\"\n",
     "t << 3"
    ]
   },
@@ -677,6 +683,7 @@
    },
    "outputs": [],
    "source": [
+    "## Ejemplo No.5 Uso de los metodos estaticos en trigonometria\n",
     "import math\n",
     "\n",
     "class Triangulo(object):\n",
@@ -718,6 +725,7 @@
     }
    ],
    "source": [
+    "\"\"\"Resultado\"\"\"\n",
     "Triangulo.hipotenusa(8,9)"
    ]
   },
@@ -788,12 +796,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "## Ejemplo No.6 Usando operator del modulo functools\n",
     "import functools, operator\n",
     "class Matematicas(object):\n",
     "    def producto(*numeros):\n",
@@ -805,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -814,12 +823,13 @@
        "60"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"Resultado\"\"\"\n",
     "Matematicas.producto(3,4,5)"
    ]
   },
@@ -862,16 +872,194 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Tijera at 0x28a6aa01128>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Enlace a piedra Papel o tijera OJOOO"
+    "class Cosa(object): pass\n",
+    "class Piedra(Cosa):pass\n",
+    "class Papel(Cosa): pass\n",
+    "class Tijera(Cosa): pass\n",
+    "\n",
+    "\n",
+    "def juego(x,y):\n",
+    "    if isinstance(x, Piedra):\n",
+    "        if isinstance(y,Piedra):\n",
+    "            return None\n",
+    "        elif isinstance(y,Papel):\n",
+    "            return y\n",
+    "        elif isinstance(y,Tijera):\n",
+    "            return x\n",
+    "        else:\n",
+    "            raise TypeError(\"La segunda cosa es desconocida :o\")\n",
+    "        \n",
+    "    elif isinstance(x, Papel):\n",
+    "        if isinstance(y,Papel):\n",
+    "            return None\n",
+    "        elif isinstance(y,Piedra):\n",
+    "            return x\n",
+    "        elif isinstance(y,Tijera):\n",
+    "            return y\n",
+    "        else:\n",
+    "            raise TypeError(\"La segunda cosa es desconocida :o\")\n",
+    "    elif isinstance(x, Tijera):\n",
+    "        if isinstance(y,Piedra):\n",
+    "            return y\n",
+    "        elif isinstance(y,Papel):\n",
+    "            return x\n",
+    "        elif isinstance(y,Tijera):\n",
+    "            return None\n",
+    "        else:\n",
+    "            raise TypeError(\"La segunda cosa es desconocida :o\")\n",
+    "    else :\n",
+    "        raise TypeError(\"La primera cosa es desconocida :o\")\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "piedra, papel, tijera = Piedra(), Papel(), Tijera()\n",
+    "juego(papel,tijera)   \n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.DTijera at 0x28a6a97de10>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class DPiedra(Piedra):\n",
+    "    def juego(self,other):\n",
+    "        if isinstance(other,Piedra):\n",
+    "            return None\n",
+    "        elif isinstance(other,Papel):\n",
+    "            return other\n",
+    "        elif isinstance(other,Tijera):\n",
+    "            return self\n",
+    "        else:\n",
+    "            raise TypeError(\"La segunda cosa es desconocida :o\")\n",
+    "            \n",
+    "class DPapel(Papel):\n",
+    "    def juego(self,other):\n",
+    "        if isinstance(other,Piedra):\n",
+    "            return self\n",
+    "        elif isinstance(other,Papel):\n",
+    "            return None\n",
+    "        elif isinstance(other,Tijera):\n",
+    "            return other\n",
+    "        else:\n",
+    "            raise TypeError(\"La segunda cosa es desconocida :o\")\n",
+    "            \n",
+    "class DTijera(Tijera):\n",
+    "    def juego(self,other):\n",
+    "        if isinstance(other,Piedra):\n",
+    "            return other\n",
+    "        elif isinstance(other,Papel):\n",
+    "            return self\n",
+    "        elif isinstance(other,Tijera):\n",
+    "            return None\n",
+    "        else:\n",
+    "            raise TypeError(\"La segunda cosa es desconocida :o\")\n",
+    "            \n",
+    "def juego2 (x,y):\n",
+    "    if hasattr(x, 'juego'):\n",
+    "        return x.juego(y)\n",
+    "    else:\n",
+    "        raise TypeError(\"La primera cosa es desconocida :o\")\n",
+    "\n",
+    "piedra, papel, tijera = DPiedra(), DPapel(), DTijera()\n",
+    "juego2(papel,tijera)   \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from multipledispatch import dispatch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.DPiedra at 0x28a6a97deb8>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@dispatch(Piedra,Piedra)\n",
+    "def juego3(x,y): return None\n",
+    "\n",
+    "@dispatch(Piedra,Papel)\n",
+    "def juego3(x,y): return y\n",
+    "\n",
+    "@dispatch(Piedra,Tijera)\n",
+    "def juego3(x,y): return x\n",
+    "\n",
+    "@dispatch(Papel,Piedra)\n",
+    "def juego3(x,y): return x\n",
+    "\n",
+    "@dispatch(Papel, Papel)\n",
+    "def juego3(x,y): return None\n",
+    "\n",
+    "@dispatch(Papel, Tijera)\n",
+    "def juego3(x,y): return x\n",
+    "\n",
+    "@dispatch(Tijera,Piedra)\n",
+    "def juego3(x,y): return y\n",
+    "\n",
+    "@dispatch(Tijera,Papel)\n",
+    "def juego3(x,y): return x\n",
+    "\n",
+    "@dispatch(Tijera, Tijera)\n",
+    "def juego3(x,y): return None\n",
+    "\n",
+    "@dispatch(object, object)\n",
+    "def juego3(x,y):\n",
+    "    if not isinstance(x,(Piedra,Papel,Tijera)):\n",
+    "        raise TypeError(\"La primera cosa es desconocida :o\")\n",
+    "    else:\n",
+    "        raise TypeError(\"La segunda cosa es desconocida :o\")\n",
+    "\n",
+    "\n",
+    "juego3(piedra,tijera)\n",
+    "        \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
