--- a/Funciones de orden superior.ipynb
+++ b/Funciones de orden superior.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unidad 4 Funciones de orden superior"
+    "# FUNCIONES DE ORDEN SUPERIOR"
    ]
   },
   {
@@ -53,7 +53,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Ejemplo No.1 Usando Map para aplicar una función a una serie de elementos\n",
+    "def cuboDeUnNumero (x) :\n",
+    "    return x**3\n",
+    "    \n",
+    "elementos = [1 , 5, 7, 8, 11 , 34]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,10 +78,7 @@
     }
    ],
    "source": [
-    "def cuboDeUnNumero (x) :\n",
-    "    return x**3\n",
-    "    \n",
-    "elementos = [1 , 5, 7, 8, 11 , 34]\n",
+    "\"\"\"Resultado\"\"\"\n",
     "print(list(map(cuboDeUnNumero, elementos)))"
    ]
   },
@@ -100,9 +110,22 @@
     }
    ],
    "source": [
+    "### Ejemplo No.2 Usando Filter para filtrar los numeros menores a cero de una lista\n",
     "listaNumeros = range(-10, 25)\n",
     "menoresQueCero = list(filter(lambda x: x < 0, listaNumeros))\n",
-    "print(menoresQueCero)\n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"Resultado\"\"\"\n",
+    "print(menoresQueCero)"
    ]
   },
   {
@@ -127,6 +150,7 @@
    },
    "outputs": [],
    "source": [
+    "### Ejemplo No.3 Usando reduce\n",
     "from functools import reduce\n",
     "import operator\n",
     "it = range(4,56)\n",
@@ -148,6 +172,7 @@
     }
    ],
    "source": [
+    "\"\"\"Resultado\"\"\"\n",
     "print(total)"
    ]
   },
@@ -299,6 +324,7 @@
    },
    "outputs": [],
    "source": [
+    "## Ejemplo No.4 Compose es analogo a la composición de funciones en calculo\n",
     "def compose (*funciones):\n",
     "    def interior(datos, funciones=funciones):\n",
     "        resultado = datos\n",
@@ -325,6 +351,7 @@
     }
    ],
    "source": [
+    "\"\"\"Resultado\"\"\"\n",
     "multiplicarDos = lambda x: x*2\n",
     "restarTres = lambda x : x-3\n",
     "moduloSeis = lambda x : x%6\n",
@@ -355,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -364,17 +391,17 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "## Ejemplo No.5 Uso de all y any para determinar si un numero es primo\n",
     "from functools import partial\n",
     "import operator\n",
     "\n",
-    "def is_prime(n):\n",
+    "def es_primo(n):\n",
     "    for i in range(2,int(n**0.5)+1):\n",
     "        if n%i==0:\n",
     "            return False\n",
@@ -387,12 +414,12 @@
     "esMenor100= partial(operator.ge, 100)\n",
     "esMayor10= partial(operator.le , 10)\n",
     "\n",
-    "todosP(71, esMenor100, esMayor10, is_prime)\n"
+    "todosP(71, esMenor100, esMayor10, es_primo)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -401,13 +428,14 @@
        "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predicados = (esMenor100, esMayor10, is_prime)\n",
+    "\"\"\"Resultado\"\"\"\n",
+    "predicados = (esMenor100, esMayor10, es_primo)\n",
     "todosP(107, *predicados)"
    ]
   },
@@ -426,27 +454,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'iterable' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-8995ae44cae8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mfunctools\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mreduce\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0msuma1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreduce\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mb\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0miterable\u001b[0m \u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'iterable' is not defined"
-     ]
-    }
-   ],
    "source": [
-    "\n",
+    "```python\n",
+    "from itertools import iterable\n",
     "suma1 = reduce (lambda a,b: a+b , iterable , 0)\n",
     "suma2 = reduce(operator.add , iterable, 0)\n",
-    "suma3 = sum(iterable)"
+    "suma3 = sum(iterable)\n",
+    "```"
    ]
   },
   {
